--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,9 +1,9 @@
-<p>new category</p>
-<%= form_for @category do |f| %>
+<p>edit item</p>
+<%= form_for @item, url: category_item_path(@item), method: :patch do |f| %>
     <%= f.label :名称 %>
     <%= f.text_field :name %> <br>
-    <%= f.label :父类别 %>
-    <%= f.text_field :parent_name %> <br>
+    <%= f.label :价格 %>
+    <%= f.text_field :price %> <br>
     <%= f.label :图片路径 %>
     <%= f.text_field :picture_addr %> <br>
     <%= f.label :introduction %>
