--- a/app/views/home/home_page.html.erb
+++ b/app/views/home/home_page.html.erb
@@ -1,1 +1,25 @@
-<p>homepage</p>
+<h1>homepage</h1>
+
+	<div class="jumbotron">
+		<h1>H1h1h1h1h1h11h1h1h!</h1>
+		<p>99992482048230482034820348230482304820482309482048230948209482390482094820</p>
+		<%= link_to image_tag('th.jpg'), categories_path %>
+		<p><%= link_to 'Learn more', categories_path,
+		               class: 'btn btn-primary btn-lg' %></p>
+	</div>
+
+<div class = "container">
+	<div class="progress">
+		<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+			<span class="sr-only">60% Complete</span>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-6 col-md-3">
+			<%= link_to image_tag('th.jpg'), '#', class: 'thumbnail' %>
+		</div>
+	</div>
+</div>
+
+
+
