--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+  <!--preheader-->
+  <%= render 'layouts/preheader' %>
+
+  <!--preheader end-->
     <%= yield %>
   </body>
 </html>
